@@ -11,6 +11,8 @@ Revision history for DBIx::Class
           resolving right-side ordered limited prefetch
         - Stop erroneously considering order_by criteria from a join under
           distinct => 1 (the distinct should apply to the main source only)
+        - Make sure deployment_statements is called on a resolved storage
+          subclass
         - Even more robust behavior of GenericSubQuery limit dialect
         - Stop Sybase ASE storage from generating invalid SQL in subselects
           when a limit without offset is encountered
